--- a/springapp-jenkins/src/main/resources/templates/index.html
+++ b/springapp-jenkins/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Thymeleaf Version Page</title>
+    <title>Spring Web App/title>
     <meta charset="UTF-8">
     <style>
         body {
@@ -29,3 +29,4 @@
     </div>
 </body>
 </html>
+
